# giapha-4.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: desktop-release.yml
deploy/nginx/: giapha.licham365.com.conf
plans/230223-homepage-redesign/: phase-01-design-assets.md  phase-02-implementation.md  phase-02b-additional-sections.md  phase-03-polish-review.md  plan.md
plans/update-site-icon/: phase-01-design-and-update-icons.md  plan.md
prisma/: schema.prisma
public/: manifest.json
scripts/: migrate-runner.cjs  prepare-sidecar.js  tauri-wrapper.js
src/: instrumentation.node.ts  instrumentation.ts  middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
src/config/: feature-limits.ts
src/hooks/: use-combined-mappings.ts  use-combined-tree-data.ts  use-events.ts  use-family-tree-data.ts  use-in-view.ts  use-lineages.ts  use-lunar-calendar.ts  use-merge-lineages.ts  use-persons.ts  use-split-lineage.ts  use-tree-drag-drop.ts
src/lib/: constants.ts
src/providers/: auth-hydrator.tsx  query-provider.tsx
src/stores/: auth-store.ts  lineage-store.ts  starred-store.ts
src/types/: api.ts  d3-modules.d.ts  event.ts  lineage.ts  person.ts  relationship.ts
tests/: global-setup.ts  helpers.ts
tests/auth/: auth-bypass.test.ts
(+152 files in other folders)
